# r_ecipe_s

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  perseus
docker/: .gitignore  Dockerfile  config.toml  docker-compose.yaml  entrypoint.sh  fly.toml  r-ecipe-s.conf
docker/qdrant-meili/: Dockerfile
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs
frontend/static/: index.css  tailwind_compiled.css  test.txt
frontend_ls/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend_ls/src/: lib.rs
meili_app/: fly.toml
r_ecipe_s_backend/: Cargo.toml  docker-compose.yaml
r_ecipe_s_backend/config/: config.toml.dist
r_ecipe_s_backend/migrations/: 20210108154100_recipes.sql  20210109155500_recipe_title.sql  20210123135500_recipe_date.sql  20220401235500_meili_indexed.sql  20230927194505_trigger-notify.sql  20231027154838_recipe_embedding.sql
r_ecipe_s_backend/src/: app_config.rs  auth.rs  db.rs  lib.rs  recipe_service.rs  search_indexer.rs
r_ecipe_s_frontend/: Cargo.toml  index.html  perseus-build-fail.out
r_ecipe_s_frontend/.perseus/: Cargo.toml
r_ecipe_s_frontend/src/: api.rs  auto_form_component.rs  error_pages.rs  form_component.rs  form_component_ls.rs  lib.rs  recipes.rs  recipes_ls.rs  search_bar.rs  util.rs
r_ecipe_s_frontend/src/css/: generated.rs
r_ecipe_s_frontend/src/templates/: about.rs  index.rs  mod.rs  recipe.rs  recipes.rs
r_ecipe_s_frontend/static/: index.css
r_ecipe_s_model/: Cargo.toml
r_ecipe_s_model/src/: lib.rs
r_ecipe_s_style/: Cargo.toml
r_ecipe_s_style/src/: generated.rs
server/: Cargo.toml
server/config/: config.toml.dist
server/src/: main.rs
