[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r_ecipe_s_frontend = { path = "../r_ecipe_s_frontend" }
sycamore = {version = "0.8.0-beta.2", features = ["suspense"]}
thiserror = "1"
