[package]
name = "r_ecipe_s_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = { version = "0.5", features = [ "migrate", "runtime-tokio-rustls", "postgres", "json",
"time"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-beta.20"
thiserror = "1.0.30"
serde = "1.0.133"
serde_json = "1.0.74"
config = {version = "0.11.0", features = ["toml"]}
clap = "3.0.5"
futures = "0.3"
futures-util = "0.3.19"
r_ecipe_s_model = { path = "../r_ecipe_s_model/"}
time = "0.3"
log = "0.4"
meilisearch-sdk = { path = "../../meilisearch-rust" }
