[package]
name = "r_ecipe_s_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = { version = "0.6", features = [ "migrate", "runtime-tokio-rustls", "postgres", "json",
"time"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
serde = "1.0.133"
config = {version = "0.11.0", features = ["toml"]}
clap = "3.0.5"
futures = "0.3"
futures-util = "0.3.19"
r_ecipe_s_model = { path = "../r_ecipe_s_model/"}
time = "0.3"
meilisearch-sdk = "0.15"
axum = {version = "0.5", features = ["headers"]}
tower-service = "0.3"
async-trait = "0.1.53"
tracing = "0.1"
axum-auth = "0.1"
jsonwebtoken = "8.0.1"
axum-extra = "0.2"
