[package]
name = "r_ecipe_s_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
r_ecipe_s_model = { path = "../r_ecipe_s_model" }
serde_json = "1.0.74"
sycamore = {version = "0.8.0-beta.2", features = ["suspense"]}
reqwasm = "0.4.0"
pulldown-cmark = "0.9"
web-sys = {version = "0.3.55", features = [
        "InputEvent", 
        "KeyboardEvent",
        "Location",
        "Storage",
        "HtmlSelectElement",
        "HtmlTextAreaElement"]}
anyhow = "1.0"
