[package]
name = "r_ecipe_s_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
r_ecipe_s_model = { path = "../r_ecipe_s_model" }
pulldown-cmark = "0.9"
web-sys = {version = "0.3.55", features = [
        "InputEvent", 
        "KeyboardEvent",
        "Location",
        "Storage",
        "HtmlSelectElement",
        "HtmlTextAreaElement"]}
anyhow = "1.0"
thiserror = "1"
url = { version = "2", features = ["serde"] }
leptos = { version = "0.5", features = ["csr"] }
log = "0.4.20"
serde_json = "1.0.107"
gloo-net = "0.4.0"
