[package]
name = "r_ecipe_s_server"
version = "0.1.0"
edition = "2021"

[dependencies]
r_ecipe_s_backend = {path = "../r_ecipe_s_backend/"}
futures = "0.3"
futures-util = "0.3.19"
tokio = { version = "1", features = ["full"] }
config = {version = "0.11.0", features = ["toml"]}
env_logger = "0.9"
thiserror = "1.0.30"
log = "0.4"
axum = "0.5"
tower-http = {version = "0.2", features = ["fs", "trace"]}
tower = "0.4.12"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1"
qdrant-client = "1.6.0"
anyhow = "1.0.75"
